Actualizando Resumen de DBs

--- a/Resumen - Bases de Datos.ipynb
+++ b/Resumen - Bases de Datos.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000000006034880>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000000008356B80>\n"
      ]
     }
    ],
@@ -72,34 +72,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conectar_db_0():\n",
-    "    mydb = mysql.connector.connect(\n",
-    "    host='localhost',\n",
-    "    user='root',\n",
-    "    password=''\n",
-    "    )   "
+    "        mydb = mysql.connector.connect(\n",
+    "        host='localhost',\n",
+    "        user='root',\n",
+    "        password=''\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000000006034880>\n"
+      "None\n"
      ]
     }
    ],
    "source": [
-    "conectar_db_0()\n",
-    "print(mydb)"
+    "print(conectar_db_0())"
    ]
   },
   {
@@ -138,20 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('formulario',)\n",
       "('information_schema',)\n",
       "('mydatabase',)\n",
       "('mysql',)\n",
       "('performance_schema',)\n",
       "('phpmyadmin',)\n",
       "('test',)\n",
-      "('vrss_operation_and_managment_subsystem',)\n"
+      "('tiendaonline',)\n",
+      "('vrss_operation_and_managment_subsystem',)\n",
+      "('wordpress',)\n"
      ]
     }
    ],
