--- a/BeautifulsoupTest.ipynb
+++ b/BeautifulsoupTest.ipynb
@@ -2,20 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h3><strong>Triángulo simétrico</strong></h3>\n",
+      "<h3><strong>Triángulo ascendente</strong></h3>\n",
+      "<h3><strong>Triángulo descendente</strong></h3>\n",
+      "<h3><strong>Banderas Y Banderines</strong></h3>\n",
+      "<h3><strong>Head and shoulders</strong></h3>\n",
+      "<h3><strong>Doble mínimo</strong></h3>\n",
+      "<h3><strong>Doble máximo</strong></h3>\n",
+      "<h3><strong>Cuña descendente</strong></h3>\n",
+      "<h3><strong>Cuña ascendente</strong></h3>\n",
+      "<h3 class=\"post-title\"><a class=\"post-link\" href=\"https://iq-study.com/es/mercado-alcista-vs-bajista-explicado/\">Mercado Alcista vs Bajista Explicado</a></h3>\n",
+      "<h3 class=\"post-title\"><a class=\"post-link\" href=\"https://iq-study.com/es/como-se-usa-el-calendario-economico-para-operar/\">¿Cómo se Usa el Calendario Económico para Operar?</a></h3>\n",
+      "<h3 class=\"comment-reply-title\" id=\"reply-title\"><span class=\"section-head\"><span class=\"title\">Escribe un Comentario</span></span> <small><a href=\"/es/patrones-de-trading-mas-populares-para-operar-con-precision/#respond\" id=\"cancel-comment-reply-link\" rel=\"nofollow\" style=\"display:none;\">Cancel Reply</a></small></h3>\n",
+      "<h3 class=\"post-title-alt\"> <a href=\"https://iq-study.com/es/horoscopo-de-trading-que-dice-tu-signo-del-zodiaco-sobre-tu-estilo-de-trading/\">Horóscopo de Trading. ¿Qué Dice Tu Signo del Zodiaco Sobre Tu Estilo de Trading?</a></h3>\n",
+      "<h3 class=\"post-title-alt\"> <a href=\"https://iq-study.com/es/errores-de-trading-que-los-principiantes-deben-evitar/\">Errores de Trading que los Principiantes Deben Evitar</a></h3>\n",
+      "<h3 class=\"post-title-alt\"> <a href=\"https://iq-study.com/es/como-crear-un-buen-diario-de-operaciones/\">¿Cómo Crear un Buen Diario de Operaciones?</a></h3>\n",
+      "<h3 class=\"post-title-alt\"> <a href=\"https://iq-study.com/es/doble-estocastico-una-estrategia-con-opciones-binarias-con-x2-de-precision-en-sus-predicciones/\">Doble Estocástico: una estrategia con opciones binarias con x2 de precisión en sus predicciones</a></h3>\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "url = 'https://p2p.binance.com/en/trade/all-payments/USDT?fiat=VES'\n",
+    "url = 'https://iq-study.com/es/patrones-de-trading-mas-populares-para-operar-con-precision/'\n",
     "response = requests.get(url)\n",
     "bs = BeautifulSoup(response.text, 'html.parser')\n",
-    "links = bs.find_all('path')\n",
+    "links = bs.find_all('h3')\n",
     "for link in links:\n",
-    "    if \"8.500\" in link:\n",
-    "        print(link)\n",
-    "    # print(link)"
+    "    # if \"8.500\" in link:\n",
+    "    #     print(link)\n",
+    "    print(link)"
    ]
   },
   {
