Actualizando documento de Base de datos

--- a/Resumen - Bases de Datos.ipynb
+++ b/Resumen - Bases de Datos.ipynb
@@ -77,23 +77,25 @@
    "outputs": [],
    "source": [
     "def conectar_db_0():\n",
-    "        mydb = mysql.connector.connect(\n",
+    "    mydb = mysql.connector.connect(\n",
     "        host='localhost',\n",
     "        user='root',\n",
     "        password=''\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "    return mydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x00000000065B9A60>\n"
      ]
     }
    ],
@@ -139,7 +141,7 @@
     "sql = \"CREATE DATABASE \\\n",
     "  VRSS_Operation_and_Managment_Subsystem\"\n",
     "\n",
-    "conectar_db_0()\n",
+    "mydb = conectar_db_0()\n",
     "mycursor = mydb.cursor()\n",
     "mycursor.execute(sql)"
    ]
