--- a/Resumen - Bases de Datos.ipynb
+++ b/Resumen - Bases de Datos.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,28 +72,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conectar_db_0():\n",
-    "        mydb = mysql.connector.connect(\n",
+    "    mydb = mysql.connector.connect(\n",
     "        host='localhost',\n",
     "        user='root',\n",
     "        password=''\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "    return mydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x00000000095F3850>\n"
      ]
     }
    ],
@@ -114,32 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "DatabaseError",
-     "evalue": "1007 (HY000): Can't create database 'vrss_operation_and_managment_subsystem'; database exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMySQLInterfaceError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Hector Martinez\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\mysql\\connector\\connection_cext.py\u001b[0m in \u001b[0;36mcmd_query\u001b[1;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[0;32m    512\u001b[0m                 \u001b[0mquery\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mquery\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 513\u001b[1;33m             self._cmysql.query(query,\n\u001b[0m\u001b[0;32m    514\u001b[0m                                \u001b[0mraw\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mraw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuffered\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbuffered\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mMySQLInterfaceError\u001b[0m: Can't create database 'vrss_operation_and_managment_subsystem'; database exists",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\HECTOR~1\\AppData\\Local\\Temp/ipykernel_8840/2635522178.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mconectar_db_0\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmycursor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmydb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmycursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msql\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\Hector Martinez\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\mysql\\connector\\cursor_cext.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, operation, params, multi)\u001b[0m\n\u001b[0;32m    267\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    268\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 269\u001b[1;33m             result = self._cnx.cmd_query(stmt, raw=self._raw,\n\u001b[0m\u001b[0;32m    270\u001b[0m                                          \u001b[0mbuffered\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_buffered\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    271\u001b[0m                                          raw_as_string=self._raw_as_string)\n",
-      "\u001b[1;32mc:\\Users\\Hector Martinez\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\mysql\\connector\\connection_cext.py\u001b[0m in \u001b[0;36mcmd_query\u001b[1;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[0;32m    516\u001b[0m                                query_attrs=self._query_attrs)\n\u001b[0;32m    517\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 518\u001b[1;33m             raise errors.get_mysql_exception(exc.errno, msg=exc.msg,\n\u001b[0m\u001b[0;32m    519\u001b[0m                                              sqlstate=exc.sqlstate)\n\u001b[0;32m    520\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mDatabaseError\u001b[0m: 1007 (HY000): Can't create database 'vrss_operation_and_managment_subsystem'; database exists"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql = \"CREATE DATABASE \\\n",
-    "  VRSS_Operation_and_Managment_Subsystem\"\n",
+    "  directorios_archivos\"\n",
     "\n",
-    "conectar_db_0()\n",
+    "mydb = conectar_db_0()\n",
     "mycursor = mydb.cursor()\n",
     "mycursor.execute(sql)"
    ]
@@ -155,13 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('directorios_archivos',)\n",
       "('formulario',)\n",
       "('information_schema',)\n",
       "('mydatabase',)\n",
@@ -178,7 +163,7 @@
    "source": [
     "sql = \"SHOW DATABASES\"\n",
     "\n",
-    "conectar_db_0()\n",
+    "mydb = conectar_db_0()\n",
     "mycursor = mydb.cursor()\n",
     "mycursor.execute(sql)\n",
     "\n",
@@ -195,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x000000000884E2B0>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x0000000009A90DF0>\n"
      ]
     }
    ],
@@ -211,7 +196,7 @@
     "  host='localhost',\n",
     "  user='root',\n",
     "  password='',\n",
-    "  database='VRSS_Operation_and_Managment_Subsystem'\n",
+    "  database='directorios_archivos'\n",
     ")\n",
     "\n",
     "print(mydb)"
@@ -228,16 +213,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class on_db:\n",
+    "\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            host,\n",
+    "            user,\n",
+    "            password,\n",
+    "            database,\n",
+    "        ):\n",
+    "\n",
+    "        self.host = host\n",
+    "        self.user = user\n",
+    "        self.password = password\n",
+    "        self.database = database\n",
+    "\n",
+    "    def connect(self):        \n",
+    "        mydb = mysql.connector.connect(\n",
+    "            host = self.host,\n",
+    "            user = self.user,\n",
+    "            password = self.password,\n",
+    "            database = self.database,\n",
+    "        )\n",
+    "\n",
+    "        return mydb\n",
+    "    \n",
+    "    def show(self):\n",
+    "        sql = \"SHOW TABLES\"\n",
+    "\n",
+    "        mydb = self.connect()\n",
+    "        mycursor = mydb.cursor()\n",
+    "        mycursor.execute(sql)\n",
+    "\n",
+    "        s = []\n",
+    "        for x in mycursor:\n",
+    "            s.append(x[0])\n",
+    "        return s\n",
+    "\n",
+    "    def drop_table(\n",
+    "            self,\n",
+    "            table,\n",
+    "        ):\n",
+    "\n",
+    "        sql = 'DROP TABLE ' + table\n",
+    "        mydb = self.connect()\n",
+    "        mycursor = mydb.cursor()\n",
+    "        mycursor.execute(sql)\n",
+    "\n",
+    "    def inject_sql(\n",
+    "            self, \n",
+    "            sql,\n",
+    "        ):\n",
+    "        \n",
+    "        mydb = self.connect()\n",
+    "        mycursor = mydb.cursor()\n",
+    "        mycursor.execute(sql)\n",
+    "\n",
+    "        if \"INSERT INTO\" in sql or \"DELETE FROM\" in sql:\n",
+    "            mydb.commit()\n",
+    "        \n",
+    "        if \"SELECT\" in sql:\n",
+    "            myresult = mycursor.fetchall()\n",
+    "            return myresult\n",
+    "\n",
+    "        if \"UPDATE\" in sql:\n",
+    "            mydb.commit()\n",
+    "            print(mycursor.rowcount, \"record(s) affected\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "host='localhost'\n",
+    "user='root'\n",
+    "password=''\n",
+    "database='directorios_archivos'\n",
+    "\n",
+    "print(\n",
+    "        on_db(\n",
+    "            host,\n",
+    "            user,\n",
+    "            password,\n",
+    "            database\n",
+    "        ).drop_table('test')\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def on_db(base_datos, sql):\n",
     "    mydb = mysql.connector.connect(\n",
-    "    host='localhost',\n",
-    "    user='root',\n",
-    "    password='',\n",
-    "    database=base_datos\n",
+    "        host='localhost',\n",
+    "        user='root',\n",
+    "        password='',\n",
+    "        database=base_datos\n",
     "    )\n",
     "\n",
     "    mycursor = mydb.cursor()\n",
