comparacion entre archivos

--- a/Resumen - Archivos y directorios.ipynb
+++ b/Resumen - Archivos y directorios.ipynb
@@ -785,6 +785,29 @@
     "Listado2 = list(Path('.').glob('*py*')) # list() es una funcion Build-in\n",
     "Listado2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from filecmp import dircmp\n",
+    "\n",
+    "dir1 = r'C:\\Users\\Hector Martinez\\Downloads\\Telegram Desktop\\Edilis Espinoza 18367802 (updated 20221005)\\20220905\\Estudios\\IMG_20220908_145302.jpg'\n",
+    "dir2 = r'C:\\Users\\Hector Martinez\\Documents\\Edilis Espinoza 18367802 (update 20221003)\\20220905\\Estudios\\IMG_20220908_145302.jpg'\n",
+    "\n",
+    "\n",
+    "def print_diff_files(dcmp):\n",
+    "    for name in dcmp.diff_files:\n",
+    "        print(\"diff_file %s found in %s and %s\" % (name, dcmp.left,\n",
+    "              dcmp.right))\n",
+    "    for sub_dcmp in dcmp.subdirs.values():\n",
+    "        print_diff_files(sub_dcmp)\n",
+    "\n",
+    "dcmp = dircmp(dir1, dir2)\n",
+    "print_diff_files(dcmp) "
+   ]
   }
  ],
  "metadata": {
