--- a/Resumen - Archivos y directorios.ipynb
+++ b/Resumen - Archivos y directorios.ipynb
@@ -811,11 +811,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f899019e40078bba6a192d1b33425237bbe8b1e870f3f4f931213adcabf069ec"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -829,9 +826,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a5a73f597fcb854980f94a18818b7be73a73b2027b10bc6a050730db2b58fc01"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
