--- a/BeautifulsoupTest.ipynb
+++ b/BeautifulsoupTest.ipynb
@@ -2,230 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You’ll need to know a bit of Python. For a refresher, see the \n",
-      "To work the examples, you’ll need \n",
-      "\n",
-      "This is a quick overview of arrays in NumPy. It demonstrates how n-dimensional\n",
-      "(\n",
-      "\n",
-      "After reading, you should be able to:\n",
-      "Understand the difference between one-, two- and n-dimensional arrays in\n",
-      "NumPy;\n",
-      "Understand how to apply some linear algebra operations to n-dimensional\n",
-      "arrays without using for-loops;\n",
-      "Understand axis and shape properties for n-dimensional arrays.\n",
-      "NumPy’s main object is the homogeneous multidimensional array. It is a\n",
-      "table of elements (usually numbers), all of the same type, indexed by a\n",
-      "tuple of non-negative integers. In NumPy dimensions are called \n",
-      "For example, the array for the coordinates of a point in 3D space,\n",
-      "\n",
-      "NumPy’s array class is called \n",
-      "the number of axes (dimensions) of the array.\n",
-      "the dimensions of the array. This is a tuple of integers indicating\n",
-      "the size of the array in each dimension. For a matrix with \n",
-      "the total number of elements of the array. This is equal to the\n",
-      "product of the elements of \n",
-      "an object describing the type of the elements in the array. One can\n",
-      "create or specify dtype’s using standard Python types. Additionally\n",
-      "NumPy provides types of its own. numpy.int32, numpy.int16, and\n",
-      "numpy.float64 are some examples.\n",
-      "the size in bytes of each element of the array. For example, an\n",
-      "array of elements of type \n",
-      "the buffer containing the actual elements of the array. Normally, we\n",
-      "won’t need to use this attribute because we will access the elements\n",
-      "in an array using indexing facilities.\n",
-      "There are several ways to create arrays.\n",
-      "For example, you can create an array from a regular Python list or tuple\n",
-      "using the \n",
-      "A frequent error consists in calling \n",
-      "\n",
-      "The type of the array can also be explicitly specified at creation time:\n",
-      "Often, the elements of an array are originally unknown, but its size is\n",
-      "known. Hence, NumPy offers several functions to create\n",
-      "arrays with initial placeholder content. These minimize the necessity of\n",
-      "growing arrays, an expensive operation.\n",
-      "The function \n",
-      "To create sequences of numbers, NumPy provides the \n",
-      "When \n",
-      "See also\n",
-      "\n",
-      "When you print an array, NumPy displays it in a similar way to nested\n",
-      "lists, but with the following layout:\n",
-      "the last axis is printed from left to right,\n",
-      "the second-to-last is printed from top to bottom,\n",
-      "the rest are also printed from top to bottom, with each slice\n",
-      "separated from the next by an empty line.\n",
-      "One-dimensional arrays are then printed as rows, bidimensionals as\n",
-      "matrices and tridimensionals as lists of matrices.\n",
-      "See \n",
-      "If an array is too large to be printed, NumPy automatically skips the\n",
-      "central part of the array and only prints the corners:\n",
-      "To disable this behaviour and force NumPy to print the entire array, you\n",
-      "can change the printing options using \n",
-      "Arithmetic operators on arrays apply \n",
-      "Unlike in many matrix languages, the product operator \n",
-      "Some operations, such as \n",
-      "When operating with arrays of different types, the type of the resulting\n",
-      "array corresponds to the more general or precise one (a behavior known\n",
-      "as upcasting).\n",
-      "Many unary operations, such as computing the sum of all the elements in\n",
-      "the array, are implemented as methods of the \n",
-      "By default, these operations apply to the array as though it were a list\n",
-      "of numbers, regardless of its shape. However, by specifying the \n",
-      "NumPy provides familiar mathematical functions such as sin, cos, and\n",
-      "exp. In NumPy, these are called “universal\n",
-      "functions” (\n",
-      "See also\n",
-      "\n",
-      "\n",
-      "\n",
-      "When fewer indices are provided than the number of axes, the missing\n",
-      "indices are considered complete slices\n",
-      "The expression within brackets in \n",
-      "The \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "However, if one wants to perform an operation on each element in the\n",
-      "array, one can use the \n",
-      "See also\n",
-      "\n",
-      "An array has a shape given by the number of elements along each axis:\n",
-      "The shape of an array can be changed with various commands. Note that the\n",
-      "following three commands all return a modified array, but do not change\n",
-      "the original array:\n",
-      "The order of the elements in the array resulting from \n",
-      "The \n",
-      "If a dimension is given as \n",
-      "See also\n",
-      "\n",
-      "Several arrays can be stacked together along different axes:\n",
-      "The function \n",
-      "On the other hand, the function \n",
-      "In general, for arrays with more than two dimensions,\n",
-      "\n",
-      "\n",
-      "In complex cases, \n",
-      "When used with arrays as arguments,\n",
-      "\n",
-      "See also\n",
-      "\n",
-      "Using \n",
-      "\n",
-      "When operating and manipulating arrays, their data is sometimes copied\n",
-      "into a new array and sometimes not. This is often a source of confusion\n",
-      "for beginners. There are three cases:\n",
-      "Simple assignments make no copy of objects or their data.\n",
-      "Python passes mutable objects as references, so function calls make no\n",
-      "copy.\n",
-      "Different array objects can share the same data. The \n",
-      "Slicing an array returns a view of it:\n",
-      "The \n",
-      "Sometimes \n",
-      "If \n",
-      "Here is a list of some useful NumPy functions and methods names\n",
-      "ordered in categories. See \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Broadcasting allows universal functions to deal in a meaningful way with\n",
-      "inputs that do not have exactly the same shape.\n",
-      "The first rule of broadcasting is that if all input arrays do not have\n",
-      "the same number of dimensions, a “1” will be repeatedly prepended to the\n",
-      "shapes of the smaller arrays until all the arrays have the same number\n",
-      "of dimensions.\n",
-      "The second rule of broadcasting ensures that arrays with a size of 1\n",
-      "along a particular dimension act as if they had the size of the array\n",
-      "with the largest shape along that dimension. The value of the array\n",
-      "element is assumed to be the same along that dimension for the\n",
-      "“broadcast” array.\n",
-      "After application of the broadcasting rules, the sizes of all arrays\n",
-      "must match. More details can be found in \n",
-      "NumPy offers more indexing facilities than regular Python sequences. In\n",
-      "addition to indexing by integers and slices, as we saw before, arrays\n",
-      "can be indexed by arrays of integers and arrays of booleans.\n",
-      "When the indexed array \n",
-      "We can also give indexes for more than one dimension. The arrays of\n",
-      "indices for each dimension must have the same shape.\n",
-      "In Python, \n",
-      "However, we can not do this by putting \n",
-      "Another common use of indexing with arrays is the search of the maximum\n",
-      "value of time-dependent series:\n",
-      "You can also use indexing with arrays as a target to assign to:\n",
-      "However, when the list of indices contains repetitions, the assignment\n",
-      "is done several times, leaving behind the last value:\n",
-      "This is reasonable enough, but watch out if you want to use Python’s\n",
-      "\n",
-      "Even though 0 occurs twice in the list of indices, the 0th element is\n",
-      "only incremented once. This is because Python requires \n",
-      "When we index arrays with arrays of (integer) indices we are providing\n",
-      "the list of indices to pick. With boolean indices the approach is\n",
-      "different; we explicitly choose which items in the array we want and\n",
-      "which ones we don’t.\n",
-      "The most natural way one can think of for boolean indexing is to use\n",
-      "boolean arrays that have \n",
-      "This property can be very useful in assignments:\n",
-      "You can look at the following\n",
-      "example to see\n",
-      "how to use boolean indexing to generate an image of the \n",
-      "The second way of indexing with booleans is more similar to integer\n",
-      "indexing; for each dimension of the array we give a 1D boolean array\n",
-      "selecting the slices we want:\n",
-      "Note that the length of the 1D boolean array must coincide with the\n",
-      "length of the dimension (or axis) you want to slice. In the previous\n",
-      "example, \n",
-      "The \n",
-      "You could also implement the reduce as follows:\n",
-      "and then use it as:\n",
-      "The advantage of this version of reduce compared to the normal\n",
-      "ufunc.reduce is that it makes use of the\n",
-      "\n",
-      "See \n",
-      "Here we give a list of short and useful tips.\n",
-      "To change the dimensions of an array, you can omit one of the sizes\n",
-      "which will then be deduced automatically:\n",
-      "How do we construct a 2D array from a list of equally-sized row vectors?\n",
-      "In MATLAB this is quite easy: if \n",
-      "The logic behind those functions in more than two dimensions can be\n",
-      "strange.\n",
-      "See also\n",
-      "\n",
-      "The NumPy \n",
-      "With Matplotlib &gt;=3.4 you can also use \n",
-      "The \n",
-      "\n",
-      "\n",
-      "\n",
-      "A \n",
-      "\n",
-      "previous\n",
-      "What is NumPy?\n",
-      "next\n",
-      "NumPy: the absolute basics for beginners\n",
-      "\n",
-      "    © Copyright 2008-2022, NumPy Developers.\n",
-      "\n",
-      "Created using \n"
+      "En los evangelios, a menudo hallamos esta invitación de Jesús: “Sígueme”, o: “Venid en pos de mí”. Jesús nunca llama a servirle, sino a seguirle. Hoy Jesús invita a todos sus redimidos por su obra en la cruz, a todos aquellos por quienes dio su vida, a seguirle. Jesús escogió a sus discípulos, en primer lugar, para “estar con él”. Y “estableció a doce, para que estuviesen con él, y para enviarlos a predicar, y que tuviesen autoridad para sanar enfermedades y para echar fuera demonios” \n",
+      "Cuando Jesús llamó a Simón y a Andrés, quienes estaban pescando, les dijo: “Venid en pos de mí, y haré que seáis pescadores de hombres”. El Señor quería, pues, compañeros para trabajar con él en su obra de gracia. Él los llamó, a pesar de su debilidad, y les proveyó todos los recursos necesarios. Él forma al que está dispuesto a acompañarlo: “Aprended de mí, que soy manso y humilde de corazón” \n",
+      "Para nosotros esto significa aprender a conocer a Jesús leyendo su Palabra. Y si vivimos cerca de él, nos pareceremos más a él. El Señor nos quiere totalmente entregados a él y nos dice: “Sígueme”. Pero a menudo respondemos: “Déjame que primero vaya…” \n",
+      "Lamentaciones 4 – Filipenses 3 – Salmo 107:33-43 – Proverbios 24:8-9\n"
      ]
     }
    ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "url = 'https://numpy.org/doc/stable/user/quickstart.html'\n",
+    "url = 'https://labuenasemilla.net/20220928'\n",
     "response = requests.get(url)\n",
     "bs = BeautifulSoup(response.text, 'html.parser')\n",
     "links = bs.find_all('p')\n",
@@ -307,11 +101,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "8a6378035587bb97055001603ea9d85a2aa377cc6252a50ffca4355a71bc8b90"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -325,9 +116,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a5a73f597fcb854980f94a18818b7be73a73b2027b10bc6a050730db2b58fc01"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
