--- a/Python y MySQL.ipynb
+++ b/Python y MySQL.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection_cext.CMySQLConnection object at 0x00000000091D3FA0>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x00000214F0BE05E0>\n"
      ]
     }
    ],
@@ -1251,11 +1251,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f899019e40078bba6a192d1b33425237bbe8b1e870f3f4f931213adcabf069ec"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1269,9 +1266,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a5a73f597fcb854980f94a18818b7be73a73b2027b10bc6a050730db2b58fc01"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
