--- a/lotajes.ipynb
+++ b/lotajes.ipynb
@@ -23,22 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "10*0.05"
+    "10*0.01"
    ]
   },
   {
@@ -46,7 +46,59 @@
    "metadata": {},
    "source": [
     "Ahora, si tenemos una cantidad fija de pips para establecer algún parámetro en nuestras operaciones, habrá que escoger el lotaje para determinar cuanto será el valor de ese parámetros en dólares. Supongamos que establecemos el **Stop Loss en 50 pips** y debemos escoger un lotaje para operar que no exceda el 3% de nuestro capital, entonces:\n",
-    "\n"
+    "\n",
+    "$$ 0.03 \\cdot \\bold{Capital} \\$ = 50 \\bold{pip} $$\n",
+    "$$ 0.03 \\cdot \\bold{Capital} \\$ = 50 \\cdot \\$10 \\cdot \\bold{Lotaje} $$\n",
+    "$$ \\bold{Lotaje} = \\frac{0.03}{500} \\cdot \\bold{Capital} $$\n",
+    "\n",
+    "Luego para un Capital del 100$ por ejemplo tendríamos un lotaje equivalente a:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005999999999999999"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.03/500 * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esto es $\\bold{Lotaje} \\approx 0.006$. Con un Lotaje así cada pip de ganancia serían $ \\$ 10 \\cdot (0.006) \\approx 0.06 \\$ $, de modo que 50 pips serían:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "50*0.06"
    ]
   }
  ],
