--- a/lotajes.ipynb
+++ b/lotajes.ipynb
@@ -100,14 +100,66 @@
    "source": [
     "50*0.06"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calcular el beneficio de una operación\n",
+    "\n",
+    "Considerando:\n",
+    "\n",
+    "* _Close_: Precio de cierre\n",
+    "* _Open_: Precio de apertura\n",
+    "* _F_: Apalancamiento\n",
+    "* _I_: Inversión\n",
+    "\n",
+    "Para las posiciones largas, el beneficio se calcula de acuerdo a la siguiente fórmula:\n",
+    "$$ B = I + ( \\frac{Close}{Open} - 1) * F$$\n",
+    "\n",
+    "Para las posiciones cortas, el beneficio se calcula de acuerdo a la siguiente fórmula:\n",
+    "$$ B = I - ( \\frac{Close}{Open} - 1) * F$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def profit(__open__, __close__, __I__, __F__):\n",
+    "    __B__ = __I__ + (__close__/__open__ - 1)*__F__\n",
+    "\n",
+    "    return __B__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1006.8181818181819\n"
+     ]
+    }
+   ],
+   "source": [
+    "open    = 12\n",
+    "close   = 15\n",
+    "I       = 1000\n",
+    "F       = 5\n",
+    "\n",
+    "print(profit(open, close, I, F))"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "8a6378035587bb97055001603ea9d85a2aa377cc6252a50ffca4355a71bc8b90"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -121,9 +173,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a5a73f597fcb854980f94a18818b7be73a73b2027b10bc6a050730db2b58fc01"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
